fixes#04, hover and numbers on list, block alignment

--- a/Sass/pages/_home.scss
+++ b/Sass/pages/_home.scss
@@ -51,12 +51,12 @@
   padding: 2.5rem 1.5rem 3.5rem 1.5rem;
 
   @include media-sm {
-    padding: 3rem 2.5rem 2rem 2.5rem;
+    padding: 3rem 3.5rem 2rem 3.5rem;
   }
 
   @include media-md {
-    padding: 1.5rem 3.5rem 3rem 3.5rem;
-    @include responsive-margin;
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
   }
 
   h3 {
@@ -79,20 +79,24 @@
     margin-bottom: 1rem;
     background-color: $light_grey;
     @include shadow-btn;
-    padding: 1.2rem 0 1.2rem 0;
-    border-radius: 17px;
+    padding: 1.2rem 2rem 1.2rem 2rem;
+    border-radius: 18px;
     @include text(black);
+    position: relative;
 
     &:hover {
-      background-color: darken($light_grey, 3%);
+      background-color: #f5e9f4;
+      &:hover i {
+        color: $purple;
+      }
     }
 
     @include media-md {
       flex-basis: 33%;
       justify-content: center;
       @include text-md(black);
-      padding: 1rem 0.5rem 1rem 1.5rem;
       font-size: 1rem;
+      max-width: 410px;
     }
 
     &:before {
@@ -106,7 +110,8 @@
       border-radius: 50%;
       font-weight: lighter;
       font-size: 1rem;
-      margin-left: -0.9rem;
+      position: absolute;
+      left: -0.75rem;
 
       @include media-md {
       }
@@ -117,14 +122,9 @@
     color: $icon_grey;
     font-size: 1.2rem;
     font-weight: bold;
-    padding: 0 1rem;
-
-    &:hover {
-      color: $purple;
-    }
+    padding-right: 1rem;
 
     @include media-md {
-      padding-right: 1.2rem;
     }
   }
 }
@@ -136,23 +136,17 @@
   padding: 2.5rem 1.5rem 2.5rem 1.5rem;
 
   @include media-sm {
-    align-items: center;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
-  @include media-md {
-    margin: auto;
     padding-left: 3.5rem;
     padding-right: 3.5rem;
   }
 
+  @include media-md {
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
+  }
+
   h3 {
     flex-basis: 100%;
-
-    @include media-sm {
-      padding: 2rem 0 0 1.5rem;
-    }
   }
 }
 
@@ -162,16 +156,15 @@
   margin-bottom: 1.5rem;
 
   @include media-sm {
-    @include flexbox(row, center, center);
+    @include flexbox(row, center, space-between);
     background-color: $light_grey;
     flex-wrap: wrap;
-    gap: 38px;
+    gap: 28px;
     padding-bottom: 2.5rem;
-    max-width: 900px;
   }
 
   .cards {
-    border-radius: 20px;
+    border-radius: 25px;
     @include shadow;
     background-color: white;
 
@@ -186,7 +179,7 @@
     &__img {
       height: 12rem;
       width: 100%;
-      border-radius: 6% 6% 0 0;
+      border-radius: 25px 25px 0 0;
       object-fit: cover;
     }
 
@@ -226,7 +219,7 @@
 
   .cards__icon {
     @include flexbox(column, center, center);
-    flex-basis: 32%;
+    flex-basis: 17%;
     font-size: 1.5rem;
 
     .full {
